overlays/lab-test/dummy-apps-merged-manifests/patch_deployment_dummy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-frontend
  namespace: dummy-frontend
spec:
  template:
    spec:
      containers:
      - name: dummy-frontend
        image: ghcr.io/dmitriysafronov/dummy-frontend:main-c9df511-1704291025848 # {"$imagepolicy": "dummy-frontend:dummy-frontend-lab-test"}
