overlays/lab-test/dummy-apps-merged-manifests/ingress_dummy-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-backend
  namespace: dummy-backend
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: dummy.lab-test.cyberbrain.pw
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: dummy-backend
            port:
              number: 80
  tls:
  - hosts:
      - dummy.lab-test.cyberbrain.pw
      - www.dummy.lab-test.cyberbrain.pw
    secretName: dummy-backend-tls
